# neutron_analysis

./: .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  environment.yml  setup.cfg
neutron_analysis/: __init__.py  photonatten.py  shielding.py  utils.py
neutron_analysis/data/: sigma_table.csv  xray_mass_attenuation_coefs.csv
notebooks/: demo.ipynb  example_input_data.xlsx
tests/: __init__.py  test_atten.py  test_shielding.py
